[gd_scene load_steps=9 format=2]

[ext_resource path="res://map/World.gd" type="Script" id=1]
[ext_resource path="res://map/Spawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/sound_fx/expand.wav" type="AudioStream" id=4]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/Negate.tscn" type="PackedScene" id=6]
[ext_resource path="res://sound/tracks/Organic_to_Synthetic.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]

resource_name = "invert"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 400, 400 ) ]
}

[node name="Map" type="Node2D"]

show_behind_parent = true
position = Vector2( -1, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
max_expansion = 10
shrink_delay = 8.0
shrink_ratio = 0.1
level_points = 1000
enemy_max_points = 100
max_hp_regen = 20.0

[node name="Enemies" parent="." index="0" instance=ExtResource( 2 )]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 480, 320 )

[node name="ExpandSound" type="AudioStreamPlayer2D" parent="Player" index="11"]

pause_mode = 2
stream = ExtResource( 4 )
volume_db = -17.0
pitch_scale = 1.0
autoplay = false
max_distance = 1000.0
attenuation = 2.0
bus = "Master"
area_mask = 2
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Animator" type="AnimationPlayer" parent="." index="2"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/invert = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="Shrink" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Screen" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GUI" parent="Screen" index="0" instance=ExtResource( 5 )]

[node name="Negate" parent="Screen" index="1" instance=ExtResource( 6 )]

visible = false

[node name="BackTrack" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = -28.0
pitch_scale = 1.0
autoplay = true
mix_target = 1
bus = "Master"

[connection signal="points_changed" from="." to="Screen/GUI" method="_on_points_changed"]

[connection signal="enemy_death" from="Enemies" to="." method="_on_enemy_death"]

[connection signal="energy_changed" from="Player" to="Screen/GUI" method="_on_Player_energy_changed"]

[connection signal="health_changed" from="Player" to="Screen/GUI" method="_on_Player_health_changed"]

[connection signal="player_death" from="Player" to="." method="_on_player_death"]

[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]

[connection signal="timeout" from="Shrink" to="." method="_on_ShrinkTimer_timeout"]

[connection signal="finished" from="BackTrack" to="." method="_on_BackTrack_finished"]


